--- a/20000201_irving.html
+++ b/20000201_irving.html
@@ -7,7 +7,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://www.historiography-project.com/assets/css/screen.css" media="screen">
 	<link rel="stylesheet" href="/irving.css" media="screen">
 <!-- end bbinclude -->
 	<meta name="Keywords" content="Irving vs. Penguin Books and Deborah Lipstadt">
@@ -15,22 +14,17 @@
 </head>
 <body>
 <!-- #bbinclude "header.incl" -->
+<header>
+	<div class="header">
+		<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="https://www.historiography-project.com/assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a>
+	</div>
+</header>
 <div class="container-fluid">
 	<div class="row">
-		<header class="col-md-12">
-			<div class="jumbotron">
+		<article class="col-md-10">
 <!-- end bbinclude -->
-<!-- #bbinclude "heading1.incl" -->
-<h1>
-	Irving vs. Penguin Books and Deborah Lipstadt
-</h1>
-<!-- end bbinclude -->
-<!-- #bbinclude "article.incl" -->
-</div><!-- /.jumbotron -->
-</header>
-</div><!-- /.row -->
-<div class="row">
-	<article class="col-md-10">
+<!-- #bbinclude "irving-v-lipstadt.incl" -->
+<h1>Irving vs. Penguin Books and Deborah Lipstadt</h1>
 <!-- end bbinclude -->
 			<h2>
 				PROCEEDINGS &mdash; DAY THIRTEEN
@@ -5569,11 +5563,11 @@
 <h4>
 	Sections
 </h4>
-<a id="archives" href="https://www.historiography-project.com/archives/index.php" title="Holocaust archive">Archives</a> <a id="mt" href="https://www.historiography-project.com/clippings/index.php" title="Clippings and commentary">Clippings</a> <a id="contest" href="https://www.historiography-project.com/contest/index.php" title="Annual Halloween contest">Contest</a> <a id="miscellaneous" href="https://www.historiography-project.com/misc/index.php" title="Holocaust-related writings">Miscellaneous</a> <a id="satire" href="https://www.historiography-project.com/satire/index.php" title="Holocaust satire">Satire</a> <a id="videos" href="https://www.historiography-project.com/video/index.php" title="Videos">Videos</a> <a id="newsfeed" href="https://www.historiography-project.com/news/index.php" title="current events">Web news</a>
+<a id="archives" href="https://www.historiography-project.com/archives/index.php" title="Holocaust archive">Archives</a> <a id="mt" href="https://www.historiography-project.com/clippings/index.php" title="Clippings and commentary">Clippings</a> <a id="contest" href="https://www.historiography-project.com/contest/index.php" title="Annual Halloween contest">Contest</a> <a id="miscellaneous" href="https://www.historiography-project.com/misc/index.php" title="Holocaust-related writings">Miscellaneous</a> <a id="satire" href="https://www.historiography-project.com/satire/index.php" title="Holocaust satire">Satire</a> <a id="videos" href="https://www.historiography-project.com/video/index.php" title="Videos">Videos</a>
 <h4>
 	Site Info
 </h4>
-<a id="new" href="https://hhpnews.blogspot.com/" title="New files and site changes">What&rsquo;s New</a> <a id="rss" href="https://www.historiography-project.com/clippings/atom.xml">RSS feed</a> <a id="colophon" href="https://www.historiography-project.com/top/colophon.php" title="About this site">Colophon</a> <a id="copyright" href="https://www.historiography-project.com/top/copyright.php" title="Copyright information">Copyright</a>
+<a id="new" href="https://hhpnews.blogspot.com/" title="New files and site changes">What&rsquo;s New</a><a id="colophon" href="https://www.historiography-project.com/top/colophon.php" title="About this site">Colophon</a> <a id="copyright" href="https://www.historiography-project.com/top/copyright.php" title="Copyright information">Copyright</a>
 <h4>
 	Navigation
 </h4>
@@ -5592,8 +5586,6 @@
 		</div><!-- /.col-md-12 -->
 	</div><!-- /.row -->
 </footer><!-- /.container -->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <!-- end bbinclude -->
 </body>
 </html>
