--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/irving.css" media="screen">
 <!-- end bbinclude -->
 	<title>Irving vs. Penguin Books and Deborah Lipstadt</title>
-	<meta name="Keywords" content="Irving vs. Penguin Books and Deborah Lipstadt">
+	<meta name="Keywords" content="David Irving, Penguin Books, Deborah Lipstadt">
 	<meta name="description" content="Irving vs. Penguin Books and Deborah Lipstadt">
 </head>
 <body>
