--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-	<link rel="stylesheet" href="/irving.css" media="screen">
+	<link rel="stylesheet" href="/_assets/css/irving.css" media="screen">
 <!-- end bbinclude -->
 	<title>Irving vs. Penguin Books and Deborah Lipstadt</title>
 	<meta name="Keywords" content="David Irving, Penguin Books, Deborah Lipstadt">
 	<meta name="description" content="Irving vs. Penguin Books and Deborah Lipstadt">
+<!-- #bbinclude "siteicons.incl" -->
+<link rel="apple-touch-icon" sizes="180x180" href="/_assets/siteicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/_assets/siteicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/_assets/siteicons/favicon-16x16.png">
+<link rel="manifest" href="/_assets/siteicons/site.webmanifest">
+<link rel="mask-icon" href="/_assets/siteicons/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="icon" href="/_assets/siteicons/favicon.ico">
+<meta name="msapplication-TileColor" content="#2d89ef">
+<meta name="msapplication-config" content="/_assets/siteicons/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+<!-- end bbinclude -->
 </head>
 <body>
 <!-- #bbinclude "header.incl" -->
 <header>
 	<div class="header">
-		<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="https://www.historiography-project.com/assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a>
+		<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a>
 	</div>
 </header>
 <div class="container-fluid">
