--- a/20000315_irving.html
+++ b/20000315_irving.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-	<link rel="stylesheet" href="/irving.css" media="screen">
+	<link rel="stylesheet" href="/_assets/css/irving.css" media="screen">
 <!-- end bbinclude -->
 	<meta name="Keywords" content="Irving vs. Penguin Books and Deborah Lipstadt">
 	<meta name="description" content="Irving vs. Penguin Books and Deborah Lipstadt">
@@ -15,7 +15,7 @@
 <!-- #bbinclude "header.incl" -->
 <header>
 	<div class="header">
-		<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="https://www.historiography-project.com/assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a>
+		<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a>
 	</div>
 </header>
 <div class="container-fluid">
