--- a/20000229_irving.html
+++ b/20000229_irving.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 	<title>Day 27</title>
 
 <!-- #bbinclude "metatags.incl" -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-	<link rel="stylesheet" href="/_assets/css/irving.css" media="screen">
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+<link rel="stylesheet" href="/_assets/css/irving.css" media="screen">
 <!-- end bbinclude -->
 	<meta name="Keywords" content="Irving vs. Penguin Books and Deborah Lipstadt">
 	<meta name="description" content="Irving vs. Penguin Books and Deborah Lipstadt">
 </head>
 <body>
-<!-- #bbinclude "header.incl" -->
-<header>
-	<div class="header">
-		<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a>
-	</div>
-</header>
-<div class="container-fluid">
-	<div class="row">
-		<article class="col-md-10">
+<!-- #bbinclude "header-irving.incl" -->
+<header><div class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a></div></header><main class="container-fluid"><div class="row"><article class="col-md-10">
 <!-- end bbinclude -->
 <!-- #bbinclude "irving-v-lipstadt.incl" -->
 <h1>Irving vs. Penguin Books and Deborah Lipstadt</h1>
@@ -5950,38 +5942,37 @@
 			</p>
 			<div class="linker">
 				<hr>
-				<b> <a href="20000111_irving.html">First</a> | <a href="20000228_irving.html">Prev</a> | <a href="index.html">HOME</a> | <a href="20000301_irving.html">Next</a> | <a href="20000315_irving.html">Last</a> </b> 
+				<b> <a href="/20000111_irving.html">First</a> | <a href="/20000228_irving.html">Prev</a> | <a href="index.html">HOME</a> | <a href="/20000301_irving.html">Next</a> | <a href="/20000315_irving.html">Last</a> </b> 
 			</div>
 
-<!-- #bbinclude "nav.incl" -->
-</article><!-- /.col-md-10 -->
-<nav class="navigation col-md-2">
-<h4>
-	Sections
-</h4>
-<a id="archives" href="https://www.historiography-project.com/archives/index.php" title="Holocaust archive">Archives</a> <a id="mt" href="https://www.historiography-project.com/clippings/index.php" title="Clippings and commentary">Clippings</a> <a id="contest" href="https://www.historiography-project.com/contest/index.php" title="Annual Halloween contest">Contest</a> <a id="miscellaneous" href="https://www.historiography-project.com/misc/index.php" title="Holocaust-related writings">Miscellaneous</a> <a id="satire" href="https://www.historiography-project.com/satire/index.php" title="Holocaust satire">Satire</a> <a id="videos" href="https://www.historiography-project.com/video/index.php" title="Videos">Videos</a>
-<h4>
-	Site Info
-</h4>
-<a id="new" href="https://hhpnews.blogspot.com/" title="New files and site changes">What&rsquo;s New</a><a id="colophon" href="https://www.historiography-project.com/top/colophon.php" title="About this site">Colophon</a> <a id="copyright" href="https://www.historiography-project.com/top/copyright.php" title="Copyright information">Copyright</a>
-<h4>
-	Navigation
-</h4>
-<a id="search" href="https://www.historiography-project.com/search.php" title="Search the HHP site">Search</a> <a id="links" href="https://www.historiography-project.com/top/links.php" title="Holocaust-related websites">Links</a> <a id="home" href="https://www.historiography-project.com/index.php" title="Back to the main HHP page">Home</a>
-</nav><!-- /.col-md-2 -->
-</div><!-- /.row -->
-</div><!-- /.container -->
-<!-- end bbinclude -->
 <!-- #bbinclude "footer.incl" -->
+</article>
+<!-- /.col-md-10 -->
+<div class="col-md-2">
+	<nav class="navigation" id="nav-hhp">
+	</nav>
+</div>
+<!-- /.col-md-2 -->
+</div>
+<!-- /.row -->
+</main>
+<!-- /.container -->
 <footer class="container-fluid footer">
 	<div class="row">
 		<div class="col-md-12">
 			<p class="text-center">
 				Send all questions and comments to the <a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Webmaster</a>.
 			</p>
-		</div><!-- /.col-md-12 -->
-	</div><!-- /.row -->
-</footer><!-- /.container -->
+		</div>
+<!-- /.col-md-12 -->
+	</div>
+<!-- /.row -->
+</footer>
+<!-- /.container -->
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
+</script>
+<script src="/_assets/js/footer-irving.js"></script>
 <!-- end bbinclude -->
 </body>
 </html>
