--- a/search/index.html
+++ b/search/index.html
@@ -6,77 +6,57 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <link rel="stylesheet" href="/_assets/css/irving.css" media="screen">
 <!-- end bbinclude -->
-	<title>Irving vs. Penguin Books and Deborah Lipstadt</title>
-	<meta name="Keywords" content="David Irving, Penguin Books, Deborah Lipstadt">
-	<meta name="description" content="Irving vs. Penguin Books and Deborah Lipstadt">
-<!-- #bbinclude "siteicons.incl" -->
-<link rel="apple-touch-icon" sizes="180x180" href="/_assets/siteicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/_assets/siteicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/_assets/siteicons/favicon-16x16.png">
-<link rel="manifest" href="/_assets/siteicons/site.webmanifest">
-<link rel="mask-icon" href="/_assets/siteicons/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="icon" href="/_assets/siteicons/favicon.ico">
-<meta name="msapplication-TileColor" content="#2d89ef">
-<meta name="msapplication-config" content="/_assets/siteicons/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
-<!-- end bbinclude -->
+	<title>Find files on this site</title>
+	<style>		.search-form
+		{
+			max-width: 500px;
+			margin: 20px auto;
+		}
+
+		.search-wrapper
+		{
+			display: flex;
+			column-gap: 10px;
+		}
+
+		input[type="text"]
+		{
+			flex: 1;
+			border: 2px solid #ddd;
+			border-radius: 4px;
+			font-size: 16px;
+			padding: 8px 12px;
+		}
+
+		button
+		{
+			background-color: #4285f4;
+			color: #FFF;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+			font-size: 16px;
+			padding: 8px 20px;
+		}
+
+		button:hover { background-color: #357abd; }
+</style>
 </head>
 <body>
 <!-- #bbinclude "header-irving.incl" -->
-<header><div class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a></div></header><main class="container-fluid"><div class="row"><article class="col-md-10">
+<header><div class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a></div></header><main class="container-fluid"><div class="row"><article class="col-md-10"><div id="nav-di"></div>
 <!-- end bbinclude -->
-<!-- #bbinclude "irving-v-lipstadt.incl" -->
-<h1>Irving vs. Penguin Books and Deborah Lipstadt</h1>
-<!-- end bbinclude -->
-			<p>
-				IN THE HIGH COURT OF JUSTICE
-			</p>
-			<p>
-				1996 I. No. 113
-			</p>
-			<p>
-				QUEEN'S BENCH DIVISION <br>
-				Royal Courts of Justice Strand, <br>
-				London
-			</p>
-			<p>
-				Before: MR JUSTICE GRAY
-			</p>
-			<p>
-				B E T W E E N:
-			</p>
-			<div class="text-center">
-				<p>
-					DAVID JOHN CAWDELL IRVING
-				</p>
-				<p>
-					<i>Claimant</i>
-				</p>
-				<p>
-					-and-
-				</p>
-				<p>
-					(1) PENGUIN BOOKS LIMITED
-				</p>
-				<p>
-					(2) DEBORAH E. LIPSTADT
-				</p>
-				<p>
-					<i>Defendants</i>
-				</p>
-			</div>
-			<p>
-				The Claimant appeared in person
-			</p>
-			<p>
-				MR RICHARD RAMPTON Q.C. (instructed by Messrs Davenport Lyons and Mishcon de Reya) appeared on behalf of the First and Second Defendants MISS HEATHER ROGERS (instructed by Davenport Lyons) appeared on behalf of the First Defendant Penguin Books Limited MR ANTHONY JULIUS (of Mishcon de Reya) appeared on behalf of the Second Defendant Deborah Lipstadt (Transcribed from the stenographic notes of Harry Counsell &amp; Company, Clifford&rsquo;s Inn, Fetter Lane, London EC4 Telephone: 020-7242-9346)
-			</p>
-			<p>
-				(This transcript is not to be reproduced without the written permission of Harry Counsell &amp; Company)
-			</p>
-			<h2>
-				Proceeding Transcripts
-			</h2>
+			<h1>
+				Search
+			</h1>
+			<form action="https://www.google.com/search" method="get" class="search-form">
+<!-- Hidden input to restrict search to specific domain -->
+				<input type="hidden" name="sitesearch" value="irving-v-lipstadt.historiography-project.com">
+				<div class="search-wrapper">
+					<input type="text" name="q" placeholder="Search this archive ..." required="">
+					<button type="submit">Search</button>
+				</div>
+			</form>
 			<ol>
 				<li> <a href="/20000111_irving.html">Day 1</a> </li>
 				<li> <a href="/20000112_irving.html">Day 2</a> </li>
