--- a/20000202_irving.html
+++ b/20000202_irving.html
@@ -13,8 +13,7 @@
 </head>
 <body>
 <!-- #bbinclude "header-irving.incl" -->
-<header><div class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a></div></header><main class="container-fluid"><div class="row"><article class="col-md-10">
-<div id="nav-di"></div>
+<header><div class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a></div></header><main class="container-fluid"><div class="row"><article class="col-md-10"><div id="nav-di"></div>
 <!-- end bbinclude -->
 <!-- #bbinclude "irving-v-lipstadt.incl" -->
 <h1>Irving vs. Penguin Books and Deborah Lipstadt</h1>
