--- a/search/index.html
+++ b/search/index.html
@@ -7,40 +7,7 @@
 <link rel="stylesheet" href="/_assets/css/irving.css" media="screen">
 <!-- end bbinclude -->
 	<title>Find files on this site</title>
-	<style>		.search-form
-		{
-			max-width: 500px;
-			margin: 20px auto;
-		}
-
-		.search-wrapper
-		{
-			display: flex;
-			column-gap: 10px;
-		}
-
-		input[type="text"]
-		{
-			flex: 1;
-			border: 2px solid #ddd;
-			border-radius: 4px;
-			font-size: 16px;
-			padding: 8px 12px;
-		}
-
-		button
-		{
-			background-color: #4285f4;
-			color: #FFF;
-			border: none;
-			border-radius: 4px;
-			cursor: pointer;
-			font-size: 16px;
-			padding: 8px 20px;
-		}
-
-		button:hover { background-color: #357abd; }
-</style>
+<link rel="stylesheet" href="/_assets/css/search.css" media="screen">
 </head>
 <body>
 <!-- #bbinclude "header-irving.incl" -->
