change link to CODOH page

--- a/20000215_irving.html
+++ b/20000215_irving.html
@@ -6183,7 +6183,7 @@
 			</div>
 
 <!-- #bbinclude "footer.incl" -->
-</article><!-- /.col-md-10 --><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div><!-- /.col-md-2 --></div><!-- /.row --></main><!-- /.container --><footer class="container-fluid footer"><div class="row"><div class="col-md-12"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="https://www.historiography-project.com/top/support-revisionism.php">Support revisionism</a></p></div><!-- /.col-md-12 --></div><!-- /.row --></footer><!-- /.container -->
+</article><!-- /.col-md-10 --><div class="col-md-2"><nav class="navigation" id="nav-hhp"></nav></div><!-- /.col-md-2 --></div><!-- /.row --></main><!-- /.container --><footer class="container-fluid footer"><div class="row"><div class="col-md-12"><p class="text-center"><a href="mailto:&#119;&#x65;&#x62;&#109;&#97;&#x73;t&#x65;&#114;&#64;&#x68;&#105;&#x73;&#116;&#111;&#x72;&#105;&#111;&#103;&#114;&#97;&#112;h&#121;&#45;&#x70;&#x72;&#x6F;&#x6A;&#x65;&#x63;&#x74;&#46;com">Contact us</a> | <a href="/support-revisionism.html">Support revisionism</a></p></div><!-- /.col-md-12 --></div><!-- /.row --></footer><!-- /.container -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
 </script>
 <script src="/_assets/js/footer-irving.js"></script>
