--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<h2>
 				Proceeding Transcripts
 			</h2>
-			<ol>
+			<ol class="columns">
 				<li> <a href="/20000111_irving.html">Day 1</a> </li>
 				<li> <a href="/20000112_irving.html">Day 2</a> </li>
 				<li> <a href="/20000113_irving.html">Day 3</a> </li>
