--- a/support-revisionism.html
+++ b/support-revisionism.html
@@ -57,6 +57,10 @@
 				Navigation
 			</h4>
 			<a id="search" href="http://www.historiography-project.com/search.php" title="Search the HHP site">Search</a> <a id="links" href="http://www.historiography-project.com/top/links.php" title="Holocaust-related websites">Links</a> <a id="home" href="http://www.historiography-project.com/index.php" title="Back to the main HHP page">Home</a>
+			<h4>
+				Go to &hellip;
+			</h4>
+			<a href="https://art-butz.historiography-project.com">Art Butz</a> <a href="https://www.historiography-project.org">Clippings</a> <a href="https://encyclopedia.historiography-project.com">Holocaust Encyclopedia</a> <a href="https://don-heddesheimer.historiography-project.com">Don Heddesheimer</a> <a href="https://joel-hayward.historiography-project.com">Joel Hayward</a> <a href="https://irving-v-lipstadt.historiography-project.com">Irving vs. Lipstadt</a> <a href="https://www.historiography-project.com">Main site</a>
 		</nav>
 <!-- /.col-md-2 -->
 	</div>
