--- a/support-revisionism.html
+++ b/support-revisionism.html
@@ -60,7 +60,7 @@
 			<h4>
 				Go to &hellip;
 			</h4>
-			<a href="https://art-butz.historiography-project.com">Art Butz</a> <a href="https://www.historiography-project.org">Clippings</a> <a href="https://encyclopedia.historiography-project.com">Holocaust Encyclopedia</a> <a href="https://joel-hayward.historiography-project.com">Joel Hayward</a> <a href="https://don-heddesheimer.historiography-project.com">Don Heddesheimer</a> <a href="https://irving-v-lipstadt.historiography-project.com">Irving vs. Lipstadt</a> <a href="https://www.historiography-project.com">Main site</a>
+			<a href="https://art-butz.historiography-project.com">Art Butz</a> <a href="https://www.historiography-project.org">Clippings</a> <a href="https://joel-hayward.historiography-project.com">Joel Hayward</a> <a href="https://don-heddesheimer.historiography-project.com">Don Heddesheimer</a> <a href="https://encyclopedia.historiography-project.com">Holocaust Encyclopedia</a> <a href="https://irving-v-lipstadt.historiography-project.com">Irving vs. Lipstadt</a> <a href="https://www.historiography-project.com">Main site</a>
 		</nav>
 <!-- /.col-md-2 -->
 	</div>
