--- a/support-revisionism.html
+++ b/support-revisionism.html
@@ -46,21 +46,13 @@
 <!-- /.col-md-10 -->
 		<nav class="navigation col-md-2" id="nav-hhp">
 			<h4>
-				Sections
-			</h4>
-			<a id="archives" href="http://www.historiography-project.com/archives/index.php" title="Holocaust archive">Archives</a> <a id="books" href="http://www.historiography-project.com/books/index.php" title="Holocaust books">Books</a> <a id="mt" href="https://www.historiography-project.org/" title="Clippings and commentary">Clippings</a> <a id="contest" href="http://www.historiography-project.com/contest/index.php" title="Annual Halloween contest">Contest</a> <a id="miscellaneous" href="http://www.historiography-project.com/misc/index.php" title="Holocaust-related writings">Miscellaneous</a> <a id="satire" href="http://www.historiography-project.com/satire/index.php" title="Holocaust satire">Satire</a> <a id="videos" href="http://www.historiography-project.com/video/index.php" title="Videos">Videos</a> <a id="newsfeed" href="http://www.historiography-project.com/news/index.php" title="current events">Web news</a>
-			<h4>
-				Site Info
-			</h4>
-			<a id="new" href="http://hhpnews.blogspot.com/" title="New files and site changes">What&rsquo;s New</a> <a id="rss" href="https://www.historiography-project.org/feed/">RSS feed</a> <a id="colophon" href="http://www.historiography-project.com/top/colophon.php" title="About this site">Colophon</a> <a id="copyright" href="http://www.historiography-project.com/top/copyright.php" title="Copyright information">Copyright</a>
-			<h4>
-				Navigation
-			</h4>
-			<a id="search" href="http://www.historiography-project.com/search.php" title="Search the HHP site">Search</a> <a id="links" href="http://www.historiography-project.com/top/links.php" title="Holocaust-related websites">Links</a> <a id="home" href="http://www.historiography-project.com/index.php" title="Back to the main HHP page">Home</a>
-			<h4>
 				Go to &hellip;
 			</h4>
-			<a href="https://art-butz.historiography-project.com">Art Butz</a> <a href="https://www.historiography-project.org">Clippings</a> <a href="https://joel-hayward.historiography-project.com">Joel Hayward</a> <a href="https://don-heddesheimer.historiography-project.com">Don Heddesheimer</a> <a href="https://encyclopedia.historiography-project.com">Holocaust Encyclopedia</a> <a href="https://irving-v-lipstadt.historiography-project.com">Irving vs. Lipstadt</a> <a href="https://www.historiography-project.com">Main site</a>
+			<a href="https://www.historiography-project.com">Main site</a> <a href="https://www.historiography-project.org">Clippings</a> <a href="https://encyclopedia.historiography-project.com">Holocaust Encyclopedia</a>
+			<h4>
+				Archives
+			</h4>
+			<a href="https://art-butz.historiography-project.com">Art Butz</a> <a href="https://joel-hayward.historiography-project.com">Joel Hayward</a> <a href="https://don-heddesheimer.historiography-project.com">Don Heddesheimer</a> <a href="https://irving-v-lipstadt.historiography-project.com">Irving vs. Lipstadt</a>
 		</nav>
 <!-- /.col-md-2 -->
 	</div>
