--- a/search/index.html
+++ b/search/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!-- #bbinclude "header-irving.incl" -->
-<header><div class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a></div></header><main class="container-fluid"><div class="row"><article class="col-md-10"><div id="nav-di"></div>
+<header><div class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" width="225" height="85"></a></div></header><main class="container-fluid"><div class="row"><article class="col-md-10"><div id="nav-di"><p class="well" style="height: 51px;"> </p></div>
 <!-- end bbinclude -->
 			<h1>
 				Search
